[metadata]
name = fastrunner
summary = Cloud computing fabric controller
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/fastrunner/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    fastrunner

[entry_points]
console_scripts =
    fastrunner-api = fastrunner.cmd.api:main
    fastrunner-sync = fastrunner.cmd.sync:main

oslo.config.opts =
    fastrunner = fastrunner.opts:list_opts
    fastrunner.conf = fastrunner.conf.opts:list_opts

fastrunner.api.v21.extensions =
    servers = fastrunner.api.openstack.compute.servers:Servers

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = fastrunner/locale
domain = fastrunner

[update_catalog]
domain = fastrunner
output_dir = fastrunner/locale
input_file = fastrunner/locale/fastrunner.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = fastrunner/locale/fastrunner.pot

[wheel]
universal = 1

[pbr]
# Have pbr generate the module indexes like sphinx autodoc
autodoc_index_modules = True


# Treat sphinx warnings as errors during the docs build; this helps us keep
# the documentation clean.
warnerrors = true
